[workspace]

resolver="2"

members = [
	"01_ingest/grebi_ingest_rdf",
	"01_ingest/grebi_ingest_sssom",
	"01_ingest/grebi_ingest_ols",
	"01_ingest/grebi_ingest_gwas",
	"01_ingest/grebi_ingest_json",
	"01_ingest/grebi_ingest_reactome",
	"01_ingest/grebi_normalise_prefixes",
	"02_equivalences/grebi_extract_equivalences",
	"02_equivalences/grebi_equivalences2groups",
	"02_equivalences/grebi_groups2rocks",
	"02_equivalences/grebi_assign_ids",
	"03_merge/grebi_merge",
	"04_index/grebi_json2rocks",
	"05_materialize_edges/grebi_rocks2neo",
	"grebi_shared"
]

