[workspace]

resolver="2"

members = [
	"01_ingest/grebi_ingest_rdf",
	"01_ingest/grebi_ingest_sssom",
	"01_ingest/grebi_ingest_ols",
	"01_ingest/grebi_ingest_gwas",
	"01_ingest/grebi_ingest_json",
	"01_ingest/grebi_ingest_reactome",
	"01_ingest/grebi_ingest_kgx_edges",
	"01_ingest/grebi_normalise_prefixes",
	"02_equivalences/grebi_extract_equivalences",
	"02_equivalences/grebi_equivalences2groups",
	"02_equivalences/grebi_assign_ids",
	"03_merge/grebi_merge",
	"04_index/grebi_index",
	"05_prepare_db_import/grebi_make_csv",
	"05_prepare_db_import/grebi_make_solr",
	"grebi_shared"
]

