[workspace]

resolver="2"

members = [
	"01_ingest/grebi_rdf2jsonl",
	"01_ingest/grebi_tsv2jsonl",
	"01_ingest/grebi_nodes2edges",
	"01_ingest/grebi_ingest_sssom",
	"01_ingest/grebi_ingest_ols",
	"01_ingest/grebi_ingest_gwas",
	"01_ingest/grebi_transform_jsonl",
	"01_ingest/grebi_ingest_reactome",
	"01_ingest/grebi_ingest_kgx_edges",
	"01_ingest/grebi_ingest_sqlite",
	"01_ingest/grebi_normalise_prefixes",
	"02_assign_ids/grebi_extract_identifiers",
	"02_assign_ids/grebi_identifiers2groups",
	"02_assign_ids/grebi_assign_ids",
	"02_assign_ids/grebi_superclasses2types",
	"03_merge/grebi_merge",
	"04_index/grebi_index",
	"05_materialise/grebi_materialise",
	"06_prepare_db_import/grebi_make_neo_csv",
	"06_prepare_db_import/grebi_make_neo_ids_csv",
	"06_prepare_db_import/grebi_make_solr",
	"07_create_db/rocksdb/grebi_make_rocks",
	"grebi_shared"
]

