[package]
name = "grebi_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.108", features=["preserve_order"] }

[lib]
name = "grebi_shared"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

