[package]
name = "grebi_ingest_rdf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
curie = "0.1.2"
libc = "0.2.150"
mownstr = "0.1.3"
serde_json = { version = "1.0.108", features=["preserve_order"] }
sophia_api = "0.8.0"
sophia_xml = "0.8.0"
sophia_inmem = "0.8.0"
sophia_turtle = "0.8.0"
grebi_shared = { path = "../../grebi_shared" }
multimap = "0.10.0"


