[package]
name = "grebi_extract_equivalences"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = { version = "1.0.108", features=["preserve_order"] }
grebi_shared = { path = "../../grebi_shared" }
csv = "1.3.0"
fasthash = "0.4.0"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", branch = "master" }
lmdb-zero = "0.4.4"
jemallocator = "0.5.4"

