[package]
name = "grebi_json2rocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
grebi_shared = { path = "../../grebi_shared" }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", branch = "master" }
flate2 = {version="1.0.28", features=["zlib-ng"]}
serde_json = { version = "1.0.108", features=["preserve_order"] }

