[package]
name = "grebi_rocks2neo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
grebi_shared = { path = "../../grebi_shared" }
flate2 = {version="1.0.28", features=["zlib-ng"]}
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", branch = "master" }
serde_json = { version = "1.0.108", features=["preserve_order"] }
